--- a/ui/package.json
+++ b/ui/package.json
@@ -14,7 +14,11 @@
     "lodash": "^4.17.20",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vue-terminal-ui": "^0.1.6",
+    "vuex": "^3.4.0",
+    "xterm": "^4.9.0",
+    "xterm-addon-attach": "^0.6.0",
+    "xterm-addon-fit": "^0.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
