--- a/ui/package.json
+++ b/ui/package.json
@@ -10,6 +10,7 @@
     "ant-design-vue": "^1.7.2",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "echarts": "^5.0.0",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.20",
     "vue": "^2.6.11",
