:sparkles: 发布0.0.5 版本

--- a/script/docker-compose.yml
+++ b/script/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   redis:
     image: redis:latest
   web:
-    build: .
+    build: registry.cn-hangzhou.aliyuncs.com/seven-tao/simple-docker:0.0.5
     ports:
       - "9090:4050"
     volumes:
