:sparkles: 新增容器、镜像备份到本地的功能 & 优化UI

--- a/.gitignore
+++ b/.gitignore
@@ -120,9 +120,8 @@ yarn.lock
 static/
 
 SimpleDocker.tar.gz
-SimpleDocker.tar.gz
 /App
 routers/
-build/resource/
-build/App
+build/
+ui/dist
 package-lock.json
